--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@capacitor/core": "7.0.1",
     "@capacitor/filesystem": "^7.0.0",
     "@capacitor/haptics": "7.0.0",
+    "@capacitor/ios": "^7.0.1",
     "@capacitor/keyboard": "7.0.0",
+    "@capacitor/live-updates": "^0.4.0",
     "@capacitor/status-bar": "7.0.0",
     "@gradio/client": "^1.13.1",
     "@ionic-native/file-opener": "^5.36.0",
