--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@capacitor/live-updates": "^0.4.0",
     "@capacitor/status-bar": "7.0.0",
     "@gradio/client": "^1.13.1",
+    "@ionic-native/core": "^5.36.0",
     "@ionic-native/file-opener": "^5.36.0",
     "@ionic/angular": "^8.0.0",
     "capacitor-voice-recorder": "^7.0.5",
